# bgsage

./: .gitignore  CLAUDE.md  CMakeLists.txt  MODEL_BENCHMARKS.md  MULTI-PLY.md  README.md  ROLLOUT.md  TRUNCATED_ROLLOUT_PERF.md  VIBING.md  pyproject.toml
.github/workflows/: wheels.yml
cpp/: CMakeLists.txt  CMakeLists_cpu.txt
cpp/include/bgbot/: bearoff.h  benchmark.h  board.h  cube.h  cuda_nn.h  encoding.h  game.h  match_equity.h  moves.h  multipy.h  neural_net.h  pubeval.h  rollout.h  strategy.h  training.h  types.h
cpp/pybind/: bindings.cpp
cpp/src/: bearoff.cpp  benchmark.cpp  benchmark_3t.cpp  benchmark_3t_experiment.cpp  benchmark_3t_profile.cpp  benchmark_4ply.cpp  benchmark_4ply_opt.cpp  benchmark_truncated_rollout.cpp  board.cpp  cube.cpp  cuda_nn.cu  cuda_nn_stub.cpp  encoding.cpp  game.cpp  main.cpp  match_equity.cpp  moves.cpp  multipy.cpp  neural_net.cpp  profile_0ply.cpp  profile_3t.cpp  profile_3t_detailed.cpp  profile_cube_4ply.cpp  profile_cube_benchmark.cpp  profile_nn_inference.cpp  profile_training.cpp  pubeval.cpp  rollout.cpp  strategy.cpp  test_4ply_accuracy.cpp  test_benchmark_crash.cpp  training.cpp
data/: opponent-backgame-benchmark-data  opponent-backgame-benchmark-rollout  player-backgame-benchmark-data  player-backgame-benchmark-rollout
data/benchmark_cubeful_pr/: rollouts.jsonl
models/: sl_anchoring.weights.best  sl_attacking.weights.best  sl_priming.weights.best  sl_purerace.weights.best  sl_racing.weights.best  sl_s4_anchoring.weights.best  sl_s4_attacking.weights.best  sl_s4_priming.weights.best  sl_s4_racing.weights.best  sl_s5_anchoring.weights.best  sl_s5_priming.weights.best  sl_s5_purerace.weights.best  sl_s5s_anchoring.weights  sl_s5s_anchoring.weights.best  sl_s5s_attacking.weights  sl_s5s_attacking.weights.best  sl_s5s_priming.weights  sl_s5s_priming.weights.best  sl_s5s_purerace.weights  sl_s5s_purerace.weights.best  sl_s5s_racing.weights  sl_s5s_racing.weights.best  sl_s6_anchoring.weights  sl_s6_anchoring.weights.best  sl_s6_attacking.weights  sl_s6_attacking.weights.best  sl_s6_priming.weights  sl_s6_priming.weights.best  sl_s6_purerace.weights  sl_s6_racing.weights  sl_s6_racing.weights.best  sl_s7_anch_att.weights.best  sl_s7_anch_prim.weights.best  sl_s7_anch_race.weights.best  sl_s7_att_anch.weights.best  sl_s7_att_att.weights.best  sl_s7_att_prim.weights.best  sl_s7_att_race.weights.best  sl_s7_prim_att.weights.best  sl_s7_prim_race.weights.best  (+130 more)
models/s8_gpw_scan/: anch_att_gpw10.0.weights  anch_att_gpw10.0.weights.best  anch_att_gpw12.0.weights  anch_att_gpw12.0.weights.best  anch_att_gpw2.0.weights  anch_att_gpw2.0.weights.best  anch_att_gpw5.0.weights  anch_att_gpw5.0.weights.best  anch_att_gpw7.0.weights  anch_att_gpw7.0.weights.best  anch_race_gpw10.0.weights  anch_race_gpw10.0.weights.best  anch_race_gpw12.0.weights  anch_race_gpw12.0.weights.best  anch_race_gpw2.0.weights  anch_race_gpw2.0.weights.best  anch_race_gpw5.0.weights  anch_race_gpw5.0.weights.best  anch_race_gpw7.0.weights  anch_race_gpw7.0.weights.best  att_anch_gpw10.0.weights  att_anch_gpw10.0.weights.best  att_anch_gpw12.0.weights  att_anch_gpw12.0.weights.best  att_anch_gpw2.0.weights  att_anch_gpw2.0.weights.best  att_anch_gpw5.0.weights  att_anch_gpw5.0.weights.best  att_anch_gpw7.0.weights  att_anch_gpw7.0.weights.best  att_att_gpw10.0.weights  att_att_gpw10.0.weights.best  att_att_gpw12.0.weights  att_att_gpw12.0.weights.best  att_att_gpw2.0.weights  att_att_gpw2.0.weights.best  att_att_gpw5.0.weights  att_att_gpw5.0.weights.best  att_att_gpw7.0.weights  att_att_gpw7.0.weights.best  (+83 more)
python/bgsage/: __init__.py  analyzer.py  batch.py  board.py  cube_points.py  data.py  gnubg.py  matchinfo.py  types.py  weights.py
scripts/: _run_rollout_contact.py  bench_4ply_s5_vs_s5s.py  bench_multipy_reference.py  benchmark_3t_cube.py  benchmark_4ply_baseline.json  benchmark_4ply_cube.py  benchmark_cube_analysis_time.py  benchmark_cube_optimizations.py  benchmark_cubeful.py  benchmark_rollout_cube_configs.py  benchmark_rollout_speed.py  benchmark_truncated_rollout.py  benchmark_truncated_rollout_cube.py  cloud_rollout.py  cloud_rollout_cubeful.py  cube_opt_baseline.json  debug_multipy.py  debug_multipy2.py  debug_multipy3.py  diag_exp.py  diagnose_td_training.py  diagnose_vr_bias.py  ecs_rollout_worker.py  eval_position.py  generate_backgame_data.py  generate_bearoff_db.py  generate_benchmark_pr.py  generate_cubeful_benchmark_pr.py  measure_pair_frequencies.py  profile_cube_benchmark.py  profile_rollout_ply.py  rollout_cube_bench.py  run_backgame_sl_training.py  run_baseline_gameplan_benchmarks.py  run_batch_evaluate.py  run_benchmark.py  run_benchmark_5nn.py  run_bg_train_round2.py  run_capacity_experiment.py  run_contact_benchmark.py  (+58 more)
tests/: test_2ply_details.py  test_batch.py  test_batch_checker_play.py  test_bearoff.py  test_cube_points.py  test_extended_inputs.py  test_extended_inputs_v2.py  test_gnubg.py
