[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "bgsage"
version = "0.1.20260421.1"
description = "Open Sage bot engine — a neural-network backgammon engine"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Mark Higgins" },
]
keywords = ["backgammon", "neural-network", "game-ai"]
dependencies = [
    "numpy>=1.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/markbgsage/bgsage"
Repository = "https://github.com/markbgsage/bgsage"
Issues = "https://github.com/markbgsage/bgsage/issues"

# ---------------------------------------------------------------------------
# scikit-build-core: CMake-driven build of the pybind11 extension (bgbot_cpp)
# ---------------------------------------------------------------------------
[tool.scikit-build]
minimum-version = "0.10"
cmake.build-type = "Release"
# The Python package tree lives under python/, not at the repo root.
wheel.packages = ["python/bgsage"]

# sdist contents: by default scikit-build-core ships git-tracked files.
# We strip everything that isn't needed to rebuild the wheel — non-production
# model weights, training intermediates, benchmark data, rollout dumps.
# The wheel itself only bundles stage9 weights + the bearoff DB (via CMake).
sdist.exclude = [
    # Non-production trained weights (only S9 ships with the wheel)
    "models/sl_s3_*",
    "models/sl_s4_*",
    "models/sl_s5_*",
    "models/sl_s5s_*",
    "models/sl_s6_*",
    "models/sl_s7_*",
    "models/sl_s8_*",
    "models/sl_anchoring*",
    "models/sl_attacking*",
    "models/sl_priming*",
    "models/sl_purerace*",
    "models/sl_racing*",
    "models/exp_*",
    # TD (temporal-difference) training snapshots
    "models/td_*",
    # Training intermediates (GPW scan checkpoints)
    "models/s*_gpw_scan/",
    # Benchmark + rollout data (used for training, not runtime)
    "data/benchmark_pr/",
    "data/benchmark_cubeful_pr/",
    "data/*-rollout*",
    "data/*-train-data",
    "data/*-benchmark-data",
    "data/*.bm",
    # Dev tooling — not needed to rebuild the wheel
    "scripts/",
    "tests/",
]

# ---------------------------------------------------------------------------
# cibuildwheel: build wheels for Py 3.10-3.13 on Linux/macOS/Windows
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = [
    "*-musllinux_*",    # glibc only
    "*_i686",           # no 32-bit
    "*-win32",          # no 32-bit Windows
    "pp*",              # no PyPy
]
build-verbosity = 1
# Smoke-test the built wheel: import the package, run a trivial analysis.
test-command = "python -c \"from bgsage import BgBotAnalyzer, STARTING_BOARD; a = BgBotAnalyzer(); r = a.checker_play(STARTING_BOARD, 3, 1); print('ok', r.moves[0].equity)\""

[tool.cibuildwheel.linux]
# manylinux_2_28 gives us GCC 12+ which supports -mavx2/-mfma out of the box.
# The compiled binary requires AVX2 (Haswell+, 2013+).
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
# Universal build: Intel (x86_64) and Apple Silicon (arm64).
archs = ["x86_64", "arm64"]
# arm64 uses NEON; x86_64 uses AVX2 (set in CMakeLists_cpu.txt).

[tool.cibuildwheel.windows]
archs = ["AMD64"]
